--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-/lib/pages/firebase_options.dart
+/lib/firebase_options.dart
 /android/app/google-services.json
 
 
